src/objects/Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_of_Onboarding__c</fullName>
        <label>Age of Onboarding</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Drivers__c</fullName>
        <formula>Opportunity__r.Business_Drivers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Drivers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor - 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Executive Sponsor 1</relationshipLabel>
        <relationshipName>Onboarding2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor - 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Executive Sponsor 2</relationshipLabel>
        <relationshipName>Onboarding1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onboarding_Age__c</fullName>
        <formula>TODAY() -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onboarding Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarding_Health__c</fullName>
        <description>Green:  On track, no issues

Yellow:  Behind schedule or risk of falling behind.  Potential risk of missing our success metrics (&lt;25%).  Expectations can be managed or reset

Red:  Significant risk to project. Major delay. Major product gap.  Severely miss-set expectations that cannot be reset</description>
        <label>Onboarding Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding_Notes__c</fullName>
        <label>Onboarding Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onboarding_Risks__c</fullName>
        <label>Onboarding Risks</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onboarding_Stage__c</fullName>
        <label>Onboarding Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Executive Alignment</fullName>
                </value>
                <value>
                    <fullName>Product Deliveries</fullName>
                </value>
                <value>
                    <fullName>End User Training</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Detail_Gdrive__c</fullName>
        <label>Project Detail (Gdrive)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sales_Ops__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Ops</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Markets__c</fullName>
        <formula>Opportunity__r.Target_Markets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Markets</label>
        <type>Text</type>
    </fields>
    <label>Onboarding</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Onboarding_Health__c</columns>
        <columns>Onboarding_Stage__c</columns>
        <columns>Onboarding_Risks__c</columns>
        <columns>Onboarding_Notes__c</columns>
        <columns>Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Onboarding ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>